--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Vintipalli Mounika</h1>
-    <img src="./pic.jpeg" alt="my profile pic" height="150" width="100"/>
+    <img src="./pic.jpeg" alt="my profile pic" height="150" width="100" align="right"/>
     <h2>Summary</h2>
     <p>I am looking for opportunities to incorporate my skills and training to help the
         company grow. I am looking forward to roles that will help me realize my potential
